Ignore AsyncWaitStrategy tests in XmlSchemaTest
As there is no corresponding XML schema definition for AsyncWaitStrategyFactory, these cannot be used in strict mode. This also improves the debuggability of the test assertions and uses some modern Java APIs.

Signed-off-by: Matt Sicker <mattsicker@apache.org>